--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,3 +1,5 @@
 add_subdirectory(Common)
 add_subdirectory(DoubleLockDetector)
 add_subdirectory(InterDoubleLockDetector)
+add_subdirectory(NewDoubleLockDetector)
+add_subdirectory(PrintLock)
