--- a/lib/PrintLock/CMakeLists.txt
+++ b/lib/PrintLock/CMakeLists.txt
@@ -1,13 +1,13 @@
-add_library(CommonLib STATIC
+add_library(PrintLock MODULE
         # List your source files here.
-        CallerFunc.cpp
+        PrintLock.cpp
         )
 
 # Use C++11 to compile our pass (i.e., supply -std=c++11).
-target_compile_features(CommonLib PRIVATE cxx_range_for cxx_auto_type)
+target_compile_features(PrintLock PRIVATE cxx_range_for cxx_auto_type)
 
 # LLVM is (typically) built with no C++ RTTI. We need to match that;
 # otherwise, we'll get linker errors about missing RTTI data.
-set_target_properties(CommonLib PROPERTIES
-        COMPILE_FLAGS "-fno-rtti -fPIC"
+set_target_properties(PrintLock PROPERTIES
+        COMPILE_FLAGS "-fno-rtti"
         )
