Add Cell Interior Mutability Checker

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -3,5 +3,6 @@ add_subdirectory(NewDoubleLockDetector)
 add_subdirectory(UseAfterFreeDetector)
 add_subdirectory(NewUseAfterFreeDetector)
 add_subdirectory(InvalidFreeDetector)
+add_subdirectory(CellIMDetector)
 add_subdirectory(PrintLock)
 add_subdirectory(PrintManualDrop)
