Double-Lock in SameLockInSameFuncDetector; Add AtomicControl

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,8 +1,12 @@
 add_subdirectory(Common)
+add_subdirectory(CFG)
 add_subdirectory(NewDoubleLockDetector)
 add_subdirectory(UseAfterFreeDetector)
 add_subdirectory(NewUseAfterFreeDetector)
 add_subdirectory(InvalidFreeDetector)
 add_subdirectory(CellIMDetector)
+add_subdirectory(NewCellIMDetector)
+add_subdirectory(SameLockInSameFuncDetector)
 add_subdirectory(PrintLock)
 add_subdirectory(PrintManualDrop)
+add_subdirectory(AtomicControlDepDetector)
